--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "none",
-    "dev": "node live-server"
+    "dev": "live-server"
   },
   "repository": {
     "type": "git",
